style: fixed table header z-index

--- a/src/styles/Table.scss
+++ b/src/styles/Table.scss
@@ -142,7 +142,6 @@
 			border-top: none;
 			border-left: none;
 			font-weight: 300;
-			z-index: 20000;
 
 			.resizer {
 				position: absolute;
